# centre-de-controle

./: .gitignore  AGENTS.md  CLAUDE.md  Centre de controle.spec  GUIDE_INSTALLATION.md  NOTICE  QUICKSTART.md  README.md  cockpit_v2_final_plan.docx  launch_cockpit.sh  launch_cockpit_legacy.sh  requirements.txt
.claude/: launch.json
agents/: clems.md  leo.md  nova.md  victor.md  vulgarisation.md
android/: README.md  build.gradle  settings.gradle
app/: main.py
assets/: Cockpit.icns
control/: README.md  mcp_server.py  ui_session.json
crates/cockpit-core/: Cargo.toml  build.rs
crates/cockpit-core/src/: app.rs  auth.rs  build_info.rs  chat.rs  lib.rs  main.rs  models.rs  openrouter.rs  orchestrator.rs  state.rs  storage.rs  terminal.rs
docs/: ANDROID_NATIVE_APP.md  AUTO_MODE.md  CLOUD_API_PROTOCOL.md  COCKPIT_NEXT_RELEASE_PROOF_2026-03-03.md  COCKPIT_NEXT_RUNBOOK.md  COCKPIT_PRESENTATION.html  COCKPIT_RUNBOOK.md  COCKPIT_VISUAL_OVERVIEW.md  DISPATCHER.md  OPENROUTER_SETUP.md  PACKAGING.md  PARITY_MATRIX_DESKTOP_ANDROID.md  PIXEL_VIEW.md  RUNBOOK.md  STATUS_REPORT.md  TAKEOVER_WIZARD.md  WIZARD_LIVE.md  cockpit_v2_alternatives.html  cockpit_v2_project_spec.html  cockpit_v2_project_spec.md  cockpit_v2_roadmap.html  cockpit_v2_whitepaper.html  cockpit_v2_whitepaper.md  generate_pdf.py  research_agent_architecture_v2.md  research_memory_reconcile_v1.md  temp_render.html  ui-research.md
scripts/: __init__.py  archive_cockpit_history_to_drive.sh  auto_mode.py  auto_mode_core.py  auto_mode_healthcheck.py  auto_mode_inbox_prune.py  build_donarg_catalog.py  (+43 more)
(+997 files in other folders)
